<resources>
    <string name="app_name" translatable="false">NoteBlog</string>
    <!-- Strings related to login -->
    <string name="prompt_email_or_username" translatable="true">邮箱/用户名</string>
    <string name="prompt_password" translatable="true">密码</string>
    <string name="login" translatable="true">登录</string>
    <string name="action_sign_in_short" translatable="false">登录</string>
    <string name="welcome" translatable="false">欢迎</string>
    <string name="invalid_username" translatable="false">用户名无效</string>
    <string name="invalid_password" translatable="false">密码最小是6位数</string>
    <string name="login_failed" translatable="false">登录失败</string>
    <!-- Strings related to indexUI  -->
    <string name="copyright" translatable="true">© 2019 ChangJiahong</string>

    <!-- Strings related to error -->
    <string name="server_error" translatable="true">服务器飞走了</string>
    <string name="no_network" translatable="true">网络开小差了</string>
    <string name="request_timed_out" translatable="true">请求超时</string>

    <!--tab图标有关-->
    <string name="home" translatable="true">发现</string>
    <string name="archives" translatable="true">归档</string>
    <string name="msg" translatable="true">消息</string>
    <string name="about_me" translatable="true">我</string>
    <!--发现页有关-->
    <string name="tag" translatable="true">标签</string>
    <string name="category" translatable="true">分类</string>
    <string name="username">用户名</string>
    <string name="comment">评论</string>
    <string name="share">分享</string>
    <string name="like">点赞</string>


    <string name="copyed">复制成功</string>
    <string name="editTime">编辑时间</string>
    <string name="YouHaveNotLoggedInYet">你还没有登录哦</string>
    <string name="no_browser_clients">没有浏览器客户端</string>
    <string name="file_manager">文件管理</string>
    <string name="article">文章</string>
    <string name="about">关于</string>
    <string name="downloadManagement">下载管理</string>
    <string name="suspend">暂停</string>
    <string name="articleManager">文章管理</string>
    <string name="version">版本</string>
    <string name="sourceCode">源代码</string>
    <string name="starToMe">欢迎给我星标</string>
    <string name="authorName">ChangJiahong</string>
    <string name="location">中国，上海</string>
    <string name="authorGitHub">我的GitHub</string>
    <string name="authorEmail">发封邮件</string>
    <string name="myEmail">changjiahong@pythong.top</string>
    <string name="authorWeb">我的网站</string>
    <string name="authorBlog">观看我的博客</string>
    <string name="author">作者</string>
    <string name="shareAndSuggest"><![CDATA[分享&建议]]></string>
    <string name="suggest">建议</string>
    <string name="myGitHub">https://github.com/ChangJiahong</string>
    <string name="reward">谢谢你请我吃糖果</string>
    <string name="shareTo">分享给</string>
    <string name="noShareClients">没有支持分享的软件</string>
    <string name="copyUrl">复制链接</string>
    <string name="noEmailClients">没有邮箱客户端</string>
    <string name="sendEmail">发送邮件</string>
    <string name="myWebUrl">www.pythong.top</string>
    <string name="helloWorld">helloWorld</string>
    <string name="myCodeRepo">https://github.com/ChangJiahong/NoteBlog</string>
    <string name="noPaymentApplication">没有找到支付应用</string>
    <string name="waiting">再等等</string>
    <string name="notAskMe">不要来烦我</string>
    <string name="tryLogin">去登陆试试</string>
    <string name="prompt">提示</string>
    <string name="loginToSee">登录才给看哟</string>
    <string name="goToLogin">去登陆</string>
    <string name="refreshSuccessfully">刷新成功</string>
    <string name="deleteSuccessfully">删除成功</string>
    <string name="clearHistory">清除历史记录</string>

</resources>
