<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7E6E6"
    tools:context=".app.aboutMe.ui.AboutMeFragment">

    <ImageView
        android:id="@+id/parallax"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginTop="-200dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/me_user_bg"
        app:layout_collapseMode="parallax"/>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlEnablePureScrollMode="true"
        app:srlEnableNestedScrolling="true"
        app:srlDragRate="1">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/panel_lyt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="150dp"
                    android:orientation="vertical"
                    android:layout_gravity="bottom">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="50dp"
                        android:paddingTop="50dp"
                        android:background="#E7E6E6"
                        android:orientation="vertical"
                        android:gravity="center_horizontal">

                        <TextView
                            android:id="@+id/username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:layout_marginTop="10dp"
                            android:text="@string/app_name"/>

                        <TextView
                            android:id="@+id/perStatement"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="个人说明"/>

                        <LinearLayout
                            android:id="@+id/fileManager"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingStart="15dp"
                            android:clickable="true"
                            android:layout_marginTop="10dp"
                            style="@style/me_item_bg">

                            <ImageView
                                android:id="@+id/icon1"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@drawable/file_manager"/>
                            <TextView
                                android:id="@+id/text1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="13dp"
                                android:paddingBottom="13dp"
                                android:textSize="16sp"
                                android:textColor="#646161"
                                android:text="@string/file_manager"
                                android:paddingLeft="10dp"/>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="10dp"/>

                        <LinearLayout
                            android:id="@+id/article"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingStart="15dp"
                            android:layout_marginTop="10dp"
                            android:clickable="true"
                            style="@style/me_item_bg">

                            <ImageView
                                android:id="@+id/icon2"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@drawable/article"/>
                            <TextView
                                android:id="@+id/text2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="13dp"
                                android:paddingBottom="13dp"
                                android:textSize="16sp"
                                android:textColor="#646161"
                                android:text="@string/article"
                                android:paddingLeft="10dp"/>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="10dp"/>

                        <LinearLayout
                            android:id="@+id/downloadTask"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingStart="15dp"
                            android:clickable="true"
                            android:layout_marginTop="10dp"
                            style="@style/me_item_bg">

                            <ImageView
                                android:id="@+id/icon3"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@drawable/download_manager"/>
                            <TextView
                                android:id="@+id/text3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="13dp"
                                android:paddingBottom="13dp"
                                android:textSize="16sp"
                                android:textColor="#646161"
                                android:text="@string/downloadManagement"
                                android:paddingStart="10dp"/>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="10dp"/>

                        <LinearLayout
                            android:id="@+id/aboutUs"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingStart="15dp"
                            android:clickable="true"
                            android:layout_marginTop="10dp"
                            style="@style/me_item_bg">

                            <ImageView
                                android:id="@+id/icon4"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@drawable/about"/>
                            <TextView
                                android:id="@+id/text4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="13dp"
                                android:paddingBottom="13dp"
                                android:textSize="16sp"
                                android:textColor="#646161"
                                android:text="@string/about"
                                android:paddingStart="10dp"/>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="10dp"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="10dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:background="@drawable/defult_click_bg_ripple"
                            android:text="@string/copyright"/>

                    </LinearLayout>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/userIcon"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/icon"
                        app:civ_border_width="3dp"
                        app:civ_border_color="@android:color/white"
                        app:civ_border_overlay="true"/>
                </RelativeLayout>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>


    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

</FrameLayout>